--- a/src/app/pages/dictionary/dictionary-item/dictionary-item.component.html
+++ b/src/app/pages/dictionary/dictionary-item/dictionary-item.component.html
@@ -47,7 +47,7 @@
           nz-icon
           nzType="edit"
           nzTheme="fill"
-          (click)="onEdit(word._id)"></span>
+          (click)="onEdit(word)"></span>
     <span *ngIf="deletable"
           nz-tooltip
           [nzTooltipTitle]="'ACTION.DELETE' | translate"
