--- a/src/app/pages/dictionary/dictionary-item/dictionary-item.component.html
+++ b/src/app/pages/dictionary/dictionary-item/dictionary-item.component.html
@@ -40,22 +40,20 @@
   <span class="word--define">{{ word.define | translate }}</span>
 
   <div class="actions">
-    <span *ngIf="editable"
-          nz-tooltip
+    <span nz-tooltip
           [nzTooltipTitle]="'ACTION.UPDATE' | translate"
           class="edit-button"
           nz-icon
           nzType="edit"
           nzTheme="fill"
-          (click)="onEdit(word)"></span>
-    <span *ngIf="deletable"
-          nz-tooltip
+          (click)="edit.emit(word)"></span>
+    <span nz-tooltip
           [nzTooltipTitle]="'ACTION.DELETE' | translate"
           nz-popconfirm
           [nzPopconfirmTitle]="'CONFIRM_DELETE' | translate: { word: word.display + '[' + word.pinyin + ']' }"
           nzOkText="OK"
           nzCancelText="Cancel"
-          (nzOnConfirm)="onDelete(word._id)"
+          (nzOnConfirm)="delete.emit(word._id)"
           (nzOnCancel)="onCancel()"
           class="delete-button"
           nz-icon
