--- a/src/app/pages/dictionary/dictionary.component.html
+++ b/src/app/pages/dictionary/dictionary.component.html
@@ -63,8 +63,8 @@
       'TOTALS' | translate : { totals: vm.total }
       }}</strong>
   </div>
-  <app-dictionary-list [editable]="canEdit"
-                       [deletable]="canDelete"
+  <app-dictionary-list (edit)="onEdit($event)"
+                       (delete)="onDelete($event)"
                        [isLoading]="vm.isLoading"
                        [words]="vm.words"
                        [filterType]="vm.filterType"></app-dictionary-list>
