--- a/src/app/core/layout/layout.component.html
+++ b/src/app/core/layout/layout.component.html
@@ -30,7 +30,7 @@
    nzTooltipPlacement="left"
    target="_blank"
    href="https://www.facebook.com/lqtoann">
-  <i nz-icon
-     nzType="facebook"
-     nzTheme="fill"></i>
+  <span nz-icon
+        nzType="facebook"
+        nzTheme="fill"></span>
 </a>
