--- a/src/app/pages/dictionary/dictionary-list/dictionary-list.component.html
+++ b/src/app/pages/dictionary/dictionary-list/dictionary-list.component.html
@@ -1,4 +1,7 @@
-<div class="list">
+<div id="list"
+     #wordListViewport
+     (scroll)="onScroll()"
+     class="list">
   <ng-container *ngIf="isLoading; else wordListTemplate">
     <div style="height: 100%; display: flex; justify-content: center; align-items: center">
       <nz-spin [nzSize]="'large'"></nz-spin>
