--- a/src/app/pages/dictionary/dictionary-list/dictionary-list.component.scss
+++ b/src/app/pages/dictionary/dictionary-list/dictionary-list.component.scss
@@ -9,3 +9,17 @@
   overflow: scroll;
   scroll-snap-type: y mandatory;
 }
+
+/****************** thumbnail ******************/
+// ::-webkit-scrollbar {
+//   display: block;
+//   width: 5px;
+//   height: 5px;
+//   background: $white !important;
+// }
+// ::-webkit-scrollbar-thumb {
+//   display: block;
+//   height: initial;
+//   background: $magenta-blue-white-linear-gradient !important;
+//   border-radius: 5px;
+// }
