--- a/src/app/pages/dictionary/dictionary-form/dictionary-form.component.scss
+++ b/src/app/pages/dictionary/dictionary-form/dictionary-form.component.scss
@@ -9,7 +9,8 @@
   display: flex;
   justify-content: flex-end;
   align-items: center;
-  .ant-btn-primary:hover, .ant-btn-primary:focus {
+  .ant-btn-primary:hover,
+  .ant-btn-primary:focus {
     background: $primary-color;
     opacity: 0.8;
   }
@@ -24,7 +25,7 @@
 
 @media (max-width: 767px) {
   .ant-modal {
-    max-width: calc(100vw - 2rem);
+    max-width: calc(100vw - 1rem);
     margin: 0 auto;
   }
 }
