--- a/src/app/pages/listening/listening.component.html
+++ b/src/app/pages/listening/listening.component.html
@@ -7,6 +7,8 @@
       <ng-template nz-tab>
         <app-audio-list [audios]="vm.data"
                         [selectedAudio]="vm.selectedAudio"
+                        [url]="url"
+                        [title]="title"
                         [isLoading]="vm.isLoading"
                         [isPlaying]="vm.isPlaying"
                         [progress]="vm.progress"
