--- a/src/app/shared/modules/audio-list/audio-list.component.html
+++ b/src/app/shared/modules/audio-list/audio-list.component.html
@@ -3,20 +3,20 @@
 </ng-container>
 <ng-template #audioListTemplate>
   <div class="controls"
-       *ngIf="selectedAudio">
-    <h4 class="audio__title">{{ selectedAudio.title | translate }}</h4>
+       *ngIf="url && title">
+    <h4 class="audio__title">{{ title | translate }}</h4>
     <audio id="audioControls"
            (playing)="playing.emit()"
            (pause)="pause.emit()"
            controls
            autoplay
            preload="none"
-           [attr.src]="selectedAudio.url">
+           [attr.src]="url">
       Your browser does not support the audio element.
     </audio>
   </div>
   <div class="controls"
-       *ngIf="!selectedAudio">
+       *ngIf="!url && title">
     <h4 class="audio__title">{{ 'SELECT' | translate }} <i nz-icon
          nzType="heart"
          nzTheme="outline"></i></h4>
@@ -37,21 +37,21 @@
   <div class="audio-list">
     <div *ngFor="let audio of audios | paginate : { itemsPerPage: 16, currentPage: currentPage }"
          class="audio"
-         [class.audio--selected]="selectedAudio === audio"
+         [class.audio--selected]="url === audio.url"
          (click)="selectAudio.emit(audio)">
       <div class="audio__type">{{ audio.type | translate }} {{ audio.grade | uppercase }}</div>
-      <strong [class.audio__title--selected]="selectedAudio === audio"
+      <strong [class.audio__title--selected]="url === audio.url"
               class="audio__title">{{ audio.title | translate }}
       </strong>
-      <p *ngIf="selectedAudio === audio && isPlaying && (progress.type === 0 || !progress.percent)">
+      <p *ngIf="url === audio.url && isPlaying && (progress.type === 0 || !progress.percent)">
         {{ 'FILE_LOADING' | translate }}
       </p>
-      <nz-progress *ngIf="selectedAudio === audio && isPlaying && progress.type !== 0"
+      <nz-progress *ngIf="url === audio.url && isPlaying && progress.type !== 0"
                    [nzStrokeWidth]="4"
                    [nzStrokeColor]="{ '0%': '#b48eadbf', '100%': '#88c0d0bf' }"
                    [nzPercent]="progress.percent"></nz-progress>
       <div class="actions">
-        <span *ngIf="selectedAudio === audio && isPlaying; else play"
+        <span *ngIf="url === audio.url && isPlaying; else play"
               class="pause"
               nz-icon
               nzType="pause-circle"
