--- a/src/app/pages/dictionary/dictionary-item/dictionary-item.component.scss
+++ b/src/app/pages/dictionary/dictionary-item/dictionary-item.component.scss
@@ -53,6 +53,7 @@
     position: absolute;
     bottom: 0;
     right: 0.5rem;
+    font-size: 18px;
     .edit-button {
       margin-right: 0.125rem;
       transition: $transition;
