--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -12,12 +12,12 @@
 </div>
 <div class="cards">
   <div [routerLink]="['/listening']"
-       (click)="audioService.changeAudioType('CURRICULUM')"
+       [queryParams]="{ type: 'CURRICULUM' }"
        class="card">
     <span>{{ 'CURRICULUM' | translate }}</span>
   </div>
   <div [routerLink]="['/listening']"
-       (click)="audioService.changeAudioType('EXERCISE')"
+       [queryParams]="{ type: 'EXERCISE' }"
        class="card">
     <span>{{ 'EXERCISE' | translate }}</span>
   </div>
