--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -12,12 +12,12 @@
 </div>
 <div class="cards">
   <div [routerLink]="['/listening']"
-       [queryParams]="{ type: 'CURRICULUM' }"
+       [queryParams]="{ type: 'CURRICULUM', tab: 0, page: 1 }"
        class="card">
     <span>{{ 'CURRICULUM' | translate }}</span>
   </div>
   <div [routerLink]="['/listening']"
-       [queryParams]="{ type: 'EXERCISE' }"
+       [queryParams]="{ type: 'EXERCISE', tab: 0, page: 1 }"
        class="card">
     <span>{{ 'EXERCISE' | translate }}</span>
   </div>
