--- a/src/app/pages/dictionary/dictionary-list/dictionary-list.component.html
+++ b/src/app/pages/dictionary/dictionary-list/dictionary-list.component.html
@@ -19,7 +19,7 @@
     <app-dictionary-item [editable]="editable"
                          [deletable]="deletable"
                          (edit)="edit.emit(word)"
-                         (delete)="delete.emit(word._id)"
+                         (delete)="delete.emit(word.wordId)"
                          *ngFor="let word of words; index as i"
                          [word]="word">
       <span [style.width.%]="'10'"
