--- a/src/app/pages/dictionary/dictionary-item/dictionary-item.component.html
+++ b/src/app/pages/dictionary/dictionary-item/dictionary-item.component.html
@@ -9,6 +9,7 @@
   <span class="word--name">{{ word.display }}</span>
   <span class="word--pinyin">[{{ word.pinyin }}]</span>
   <span class="word--chivi">({{ word.chinaVietnamWord | titlecase }})</span>
+  <span class="word--type"><nz-tag>{{ word.type | translate | lowercase }}</nz-tag></span>
   <span class="word--hsk">
     <ng-container [ngSwitch]="word.hsk">
       <ng-container *ngSwitchCase="'hsk1'">
